--- a/spec/data/manifest.invalid.missing_keys.json
+++ b/spec/data/manifest.invalid.missing_keys.json
@@ -1,7 +1,6 @@
 {
-    "srcDir": "./spec/data/src",
     "outDir": "./spec/data/out",
-    "cargoList": ["foo.js"],
+    "cargoList": [{ "name": "foo.js", "path": "./spec/data/src"}],
     "checks":[
         {
             "check": true,
